# kv-database

./: CMakeLists.txt  README.md  client  client.cpp  compile_server.sh  http_request_parser.h  main.cpp  parsejsontest.cpp  query_parser.cpp  query_parser.h  query_parser2.cpp  server  server.cpp
CommonFiles/: http_request_parser.cpp  http_request_parser.h  http_response_parser.cpp  http_response_parser.h
DataBaseClient/: Makefile  main.cpp
DataBaseServer/: data_base.cpp  data_base.h  data_base_query.cpp  data_base_query.h  handle_request.cpp  main.cpp
DataBaseServer/include/: data_base.h  data_base_query.h
DataBaseServer/logs/: logs.txt
DataBaseServer/src/: data_base.cpp  data_base_query.cpp  handle_request.cpp
DatabaseServer/: data_base.cpp  data_base.h  data_container.cpp  data_container.h  db.h  db_methods.cpp  main.cpp  query.cpp  query.h  query_parser.cpp  query_parser.h  query_parser2.cpp
DatabaseServer/includes/: data_base.h  data_container.h  server.h
DatabaseServer/logs/: log.txt
DatabaseServer/src/: data_base.cpp  data_container.cpp  query_parser.cpp  query_parser2.cpp  server.cpp
new_version/: client  http_request_parser.cpp  http_response_parser.cpp  http_response_parser.h  server
new_version/DataBaseClient/: http_request_parser.cpp  http_request_parser.h  main.cpp
new_version/DataBaseServer/: http_response_parser.cpp  http_response_parser.h  main.cpp
new_version/some_tests/: client.cpp  server  server.cpp  test_commands  testing_networklib.cpp
old_version/: CMakeLists.txt
old_version/DatabaseClient/: client.cpp  client.h  main.cpp
old_version/DatabaseServer/includes/: server.h
old_version/DatabaseServer/src/: data_container.cpp  query_parser2.cpp
old_version/some_tests/: server.cpp  test.json  test_commands
some_tests/: client  server  server.cpp  test_commands  testregex.cpp
tests/: test_commands
